Fix header spacing on section banners, #2

--- a/assets/sass/tlo/_custom.scss
+++ b/assets/sass/tlo/_custom.scss
@@ -48,7 +48,7 @@ body {
     color: _palette(bg);
   }
 
-  h3 {
+  h2.section {
     margin-top: 2em;
   }
 
